// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupRow handles high member count and moderator role 1`] = `
<View>
  <Image
    source={
      Object {
        "uri": undefined,
      }
    }
  />
  <TouchableOpacity
    onPress={[Function]}
  >
    <Text>
      Greater Place
    </Text>
  </TouchableOpacity>
  <Icon
    name="Star"
  />
  <Text>
    24.5k
  </Text>
  <Icon
    name="Members"
  />
</View>
`;

exports[`GroupRow matches the last snapshot 1`] = `
<View>
  <Image
    source={
      Object {
        "uri": undefined,
      }
    }
  />
  <TouchableOpacity
    onPress={[Function]}
  >
    <Text>
      Great Place
    </Text>
  </TouchableOpacity>
  <Text>
    432
  </Text>
  <Icon
    name="Members"
  />
</View>
`;

exports[`MemberDetails matches the last snapshot 1`] = `<Loading />`;

exports[`MemberDetails returns Loading when there's no person 1`] = `<Loading />`;

exports[`MemberGroups matches the last snapshot 1`] = `null`;

exports[`MemberSkills matches the last snapshot 1`] = `
<View>
  <View>
    <Text>
      MY SKILLS
    </Text>
  </View>
  <TouchableOpacity
    disabled={true}
  >
    <View>
      <Text>
        RUN
      </Text>
      <Text>
        ALL
      </Text>
      <Text>
        DAY
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
